--- a/wiki/templates/list.html
+++ b/wiki/templates/list.html
@@ -1,19 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% load static %}
   <h3>Wikis {% if pages %}<small class="text-muted">({{ pages|length }} Page{{ pages|length|pluralize:"s" }})</small>{% endif %}</h3>
   <hr>
   {% if pages %}
     <div class="card-columns">
       {% for page in pages %}
         {% include "partials/card.html" %}
+        <img src="{% static "makewiki_v2/darthvader.jpeg" %}">
       {% endfor %}
     </div>
   {% else %}
     <div class="alert alert-primary" role="alert">No pages to display.</div>
   {% endif %}
 {% endblock %}
-
-
-
-
